--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ hr {
 }
 
 .siteSection {
-  margin-top: 5%;
+  margin: 5%;
+
 }
 
 .page-heading{
@@ -34,5 +35,9 @@ hr {
 }
 
 #about{
-  margin-top: .2%;
+  padding-top: 1%;
+}
+
+#navbar {
+  background-color: #013E7F;
 }
